<resources>
    <string name="integrations_settings">Integrations</string>
    <string name="app_name">Life Goals</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="strava_integration"><u>Strava</u></string>
    <string name="settings">Settings</string>
    <string name="activity_factor_description">Remember this choice only applies to your activity outside of what you are tracking within this app.\n\n- Sedentary (Desk job very little walking about)\n- Lightly active (sports 1-3 days/week)\n- Moderatetely active (sports 3-5 days/week)\n- Very active (sports 6-7 days a week)\n- Extremely active (very hard sports and physical job or 2x training)</string>
    <string name="bmr"><u>BMR</u></string>
    <string name="meal_creator">Meal Creator</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="ingredient"><u>Ingredients:</u></string>
    <string name="serving_size"><u>Weight</u></string>
    <string name="fat"><u>Fat</u></string>
    <string name="carbs"><u>Carbs</u></string>
    <string name="protein"><u>Protein</u></string>
    <string name="total"><u>Total</u></string>
    <string name="amount_string"><u>Amount</u></string>
    <string name="max_string"><u>Max</u></string>
    <string name="static_string"><u>Static</u></string>
    <string name="ingredient_manager">Edit Pantry</string>
    <string name="stores_json">STORES_JSON</string>
    <string name="meals_json">MEALS_JSON</string>
    <string name="ingredients_json">INGREDIENTS_JSON</string>
    <string name="title_activity_edit_list">EditListActivity</string>
    <string name="shopping_list_json">SHOPPING_LIST</string>
    <string name="meal_plan_json">MEAL_PLANS</string>
    <string name="meal_logs_json">MEAL_LOGS_JSON</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="store_manager">Manage Stores</string>
</resources>
