<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="15dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/amount_string"/>

        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/max_string"/>

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/static_string"/>

    </LinearLayout>

</LinearLayout>